# bv-rs

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: or3.rs  read_bits.rs  to_bit_vec.rs
src/: iter.rs  lib.rs  macros.rs  prims.rs  slice.rs  storage.rs
src/adapter/: bool_adapter.rs
src/bit_vec/: impls.rs  inner.rs  mod.rs  test.rs
src/traits/: bit_sliceable.rs  bits.rs  bits_ext.rs  bits_mut.rs  bits_mut_ext.rs  mod.rs
tests/: random_adapter.rs
