[package]
name = "nostd-bv"
version = "0.11.2"
authors = ["Jesse A. Tov <jesse.tov@gmail.com>"]
description = "Bit-vectors and bit-slices"
repository = "https://github.com/nostd-rs/bv.git"
documentation = "https://docs.rs/nostd-bv"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["bitvector", "bit", "vector", "bitvec", "bitset", "no_std"]
categories = ["data-structures", "no-std"]
edition = "2021"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
quickcheck = "0.6.2"

[package.metadata.docs.rs]
features = ["serde"]

[features]
default = ["std"]
std = ["serde?/std"]
